--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxt/ui": "^3.2.0",
     "@unhead/vue": "^2.0.12",
+    "axios": "^1.10.0",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
