--- a/admin/package.json
+++ b/admin/package.json
@@ -9,18 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nuxt/ui": "^3.2.0",
-    "@unhead/vue": "^2.0.12",
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.10.0",
+    "element-plus": "^2.10.4",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.14",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^7.0.4",
     "vue-tsc": "^2.2.12"
   }
