--- a/web/package.json
+++ b/web/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "element-plus": "^2.10.4",
+    "axios": "^1.10.0",
+    "lodash-es": "^4.17.21",
+    "pinia": "^3.0.3",
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.0.14",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
-    "unplugin-auto-import": "^19.3.0",
-    "unplugin-vue-components": "^28.8.0",
     "vite": "^7.0.4",
     "vue-tsc": "^2.2.12"
   }
